1.3.8 - TBD

* The scene/world directory selection dialogs now indicate if a valid
  directory is selected.
* Added button to scale canvas width/height by 1.5.
* Replaced the preview window scaling buttons with a drop-down list.
* Added Entities tab in the Render Controls dialog, allowing posing and
  skinning of player entities.
* Fixed chunk loading error that caused Chunky to hang while loading chunks
  if a font texture is missing.
* Launcher v1.8.12: the launcher now always tries to launch the embedded
  version.

1.3.7 - 2015-10-17

* Launcher v1.8.11: added --console option to show the GUI console even in
  headless mode.
* Added player entity rendering.
* Added option to disable player loading in the General tab in the
  Render Controls window.
* Fixed potential crash when rendering fire.
* Fixed potential crash when loading custom resource pack while the default
  resource pack could not be found.
* Store the current world dimension and re-open the current world in the same
  dimension next time Chunky starts.

1.3.6 - 2015-10-04

* Fire textures are now loaded from resource pack.
* New scenes have emitters turned off by default.
* Cloud offset is now fixed relative to world origin.
* Added chunk count column in scene selector table.
* Added output mode selector in the advanced tab, with an option to select
  32-bit TIFF output.
* Changed the postprocess JSON variable to String.
* Added black sky mode, useful for rendering an emitter-only pass.
* Improved glass pane and iron bars rendering.
* Added rendering for the following Minecraft 1.9 block types:
    + End Rod
    + Chorus Plant, Flower
    + Purpur Block, Pillar, Slab, Stairs
    + End Stone Bricks
    + Grass Path
* Added buttons to uniformly scale the 3D canvas.
* Replaced the status text embedded in the render preview by an overlay label.
* Added mob head rendering.
* Added sign text rendering.
* Signs are now rendered slightly taller, the same size as they appear in
  Minecraft.