@@ -31,6 +31,7 @@
 .idea/*
 *.eml
 *.iml
+/out/
 
 # Render snapshots from testing.
 /*.png
