@@ -1,5 +1,7 @@
 1.3.8 - TBD
 
+* Fixed water being renderd on sign blocks below the water height in water
+  world mode.
 * The scene/world directory selection dialogs now indicate if a valid
   directory is selected.
 * Added button to scale canvas width/height by 1.5.
